--- a/vignettes/7.1.3 sedimentation.Rmd
+++ b/vignettes/7.1.3 sedimentation.Rmd
@@ -1,10 +1,59 @@
 ---
 title: "7.1.3 Sedimentation from water to sediment"
+author: "Valerie de Rijk"
 output: github_document
 editor_options: 
   chunk_output_type: console
 ---
 
+```{r setup, include=FALSE}
+knitr::knit_meta()
+knitr::opts_chunk$set(echo = TRUE)
+projectRoot <- paste(getwd(), "..", sep = "/")
+knitr::opts_knit$set(root.dir = projectRoot) #assuming vignette is in a direct subfolder of the project
+```
+
+### Sedimentation from water to sediment 
+Transport from water to sediment is solely driven by the sedimentatio rate. The net exchange between water and sediment is also dependent on resuspension, for this see 7.1.4. 
+Sedimentation rate depends on the settling velocity of the particle, which is calculated according the functions given below. 
+```{r initiate, message=FALSE, warning=FALSE}
+
+source("baseScripts/initWorld_onlyParticulate.R")
 
 
+```
 
+## Settling Velocity
+Settling Velocity is calculated slightly differently for molecules and particulates. For particulates, shape characteristics are known which are used in the computation of Stokes. For molecules, Stokes is also used, but assuming that the molecule is attached to a suspended matter particle. As such, molecules (Unbound species), do not have their own Settling velocity. This is calculated for the colloids based on : 
+
+SetlingVelocityCP <- f_SetVelWater(radius = from.RadCP,
+                                      rhoParticle = from.RhoCP, rhoWater = 998, DynViscWaterStandard) 
+      }
+
+_Note that for Molecular species - all classic substances! - the settling velocity in excel is set at 2.5 m/day_
+
+For particulates, we can fetch the Settling Velocity. This is dependent on multiple input parameters. For each speciation (Solid, attached, or aggregated), the radius and density are computed. They're settling velocities are calculated seperately.
+
+Different approximations for settling velocities are available, of which Stokes is the original and default value. Other approximations (Dietrich, Dioguardi and Swamee) require different inputs. These alternative approximations also require information on the Reynolds Regime and/or shape characteristics. These are then used to calculate new drag coefficients and numerically solved. A solver can be chosen through setConst: 
+
+```{r solver}
+World$SetConst(DragMethod = "Original")
+```
+
+```{r other variables}
+World$NewCalcVariable("rho_species")
+World$CalcVar("rho_species" )
+World$NewCalcVariable("rad_species")
+World$CalcVar("rad_species" )
+World$NewCalcVariable("SettlingVelocity")
+World$CalcVar("SettlingVelocity" )
+```
+
+Sedimentation is directly to the sediment below. Its rate is thus dependent on the vertical depth, resulting in k_sedimentation = SettlingVelocity/Vertical depth for particulates. For molecules, we correct for the fact that some molecular species will be dissolved in the water column and thus not attached to suspended matter. As such, the sedimentation rate is divided by (1- FRofmoleculesdissolved.)
+
+
+```{r message=FALSE, warning=FALSE}
+test1 <- World$NewProcess("k_Sedimentation")
+test1$execute()
+
+```
