--- a/vignettes/Getting started.Rmd
+++ b/vignettes/Getting started.Rmd
@@ -16,11 +16,11 @@ projectRoot <- paste(getwd(), "..", sep = "/")
 knitr::opts_knit$set(root.dir = projectRoot) #assuming vignette is in a direct subfolder of the project
 ```
 
-# Initialize
+## Initialize
 
 This vignette demonstrates how to use SimpleBox Object-Oriented (SBOO).
 
-## Choose a substance
+### Choose a substance
 
 The first step is to initialize the model. Before initialization a
 substance needs to be selected, otherwise the "default substance" is
@@ -36,7 +36,7 @@ substances <- read.csv("~/GitHub/SimpleBox/SBooScripts/data/Substances.csv")
 substance <- "1-aminoanthraquinone"
 ```
 
-## Initialize the World object
+### Initialize the World object
 
 The World object contains all variables and first order rate constants
 (k's) for the chosen substance. This object is needed later to calculate
@@ -74,7 +74,7 @@ if(substance == "microplastic"){
 
 ```
 
-# Accessing variables and k's
+## Accessing variables and k's
 
 Now that the World is initialized, its variables and calculated flows
 can be accessed. To access these variables and k's, first the names of
@@ -86,7 +86,7 @@ varnames <- World$fetchData()
 print(varnames)
 ```
 
-## Access variables
+### Access variables
 
 A specific variable (in this case AreaSea) can be accessed as follows:
 
@@ -94,7 +94,7 @@ A specific variable (in this case AreaSea) can be accessed as follows:
 World$fetchData("AreaSea")
 ```
 
-## Access k's
+### Access k's
 
 The "kaas" variable contains a data frame with the k's, proccess name,
 to-subcompartment name from-subcompartment name, to-scale name,
@@ -105,20 +105,17 @@ accessed in the same way other variables are accessed:
 df_ks <- World$fetchData("kaas")
 ```
 
-# Calculate steady state output
+## Calculate steady state output
 
 To calculate steady state masses, emissions and a solver are needed. The
 have to be given to the solver in a particular format.
 
-## Create emissions data frame
+### Create emissions data frame
 
 To be able to calculate steady state masses, an emission data frame is
 needed. The emissions data frame consists of one column with the
 abbreviation of the scale-subcompartment-species combination, and
 another column containing the emission to that compartment.
-
-*Note: for the particulates, use the S (solid) species, for molecules,
-use the U (unbound) species.*
 
 The abbreviations are as follows:
 
@@ -161,6 +158,10 @@ emissions. In the example below, emissions of 10000 t/y go into regional
 air, regional agricultural soil and regional river water. These
 emissions in tonnes per year are then converted to mol/s.
 
+**Notice that because this script is using a molecular substance, the
+abbreviation "U" for "Unbound" is used here to specify emissions. If the
+substance is a particle, use "S" for "Solid"!**
+
 ```{r Create emissions data frame, include=TRUE, warning=FALSE}
 emissions <- data.frame(Abbr = c("aRU", "s2RU", "w1RU"), Emis = c(10000, 10000, 10000) ) 
 
@@ -169,9 +170,11 @@ MW <- World$fetchData("MW")
 emissions <- emissions |>
   mutate(Emis = Emis*1000/(MW*365*24*60*60)) # convert 1 t/y to mol/s
 
+print(emissions)
+
 ```
 
-## Solve the matrix
+### Solve the matrix
 
 To solve the matrix, a solver first needs to be specified. To solve for
 a steady state we can use "SB1Solve". In this case the resulting steady
@@ -188,4 +191,4 @@ print(masses)
 
 ```
 
-# Calculate dynamic output
+## Calculate dynamic output
