--- a/vignettes/7.2 OtherKair.Rmd
+++ b/vignettes/7.2 OtherKair.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Diffusion Processes"
+title: "Other K air"
 author: "Jaap Slootweg, Valerie de Rijk"
 date: "`r Sys.Date()`"
 output: github_document
@@ -27,7 +27,7 @@ as described in 7.1.1.
 
 3.  \- Advection 
 
-####Initialization
+#### Initialization
 
 We initialise a "World" and calculate the needed parameters.
 
